--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 #grid {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    margin: 10vmin 0 20vmin;
+    margin: 10vmin 0 15vmin;
 }
 
 
@@ -17,11 +17,18 @@ body {
 /* -- Main Text -- */
 
 #name-plate {
-    margin: 15vmin 0;
+    margin: 15vmin 0 25vmin;
     display: flex;
     justify-content: center;
     align-items: center;
     grid-row: 1;
+}
+
+@media only screen and (max-height: 500px) {
+   
+    #name-plate {
+        margin: 10vmax 0 25vmax;
+    }
 }
 
 #name-text {
@@ -56,10 +63,6 @@ h1 {
 
 @media only screen and (min-width: 575px) {
     
-    #name-plate {
-        margin: 87px 0;
-    }
-
     #hello {
         margin: 0 32px;  
         font-size: 35px;
@@ -117,14 +120,14 @@ h1 {
         opacity: 0;
     }
     40% {
-        transform: translate(0);
+        transform: translate(0) rotate(20deg);
         opacity: 1;
     }
     70% {
-        transform: translate(0, -30px);
+        transform: translate(0, -30px) rotate(20deg);
     }
     100% {
-        transform: translate(0) rotate(-20deg);
+        transform: translate(0) rotate(0);
     }
 }
 
@@ -134,14 +137,14 @@ h1 {
         opacity: 0;
     }
     40% {
-        transform: translate(0);
+        transform: translate(0) rotate(-40deg);
         opacity: 1;
     }
     70% {
-        transform: translate(0, -30px);
+        transform: translate(0, -30px) rotate(-40deg);
     }
     100% {
-        transform: translate(0) rotate(40deg);
+        transform: translate(0) rotate(0);
     }
 }
 
@@ -151,159 +154,78 @@ h1 {
         opacity: 0;
     }
     40% {
-        transform: translate(0);
+        transform: translate(0) rotate(10deg);
         opacity: 1;
     }
     70% {
-        transform: translate(0, -30px);
+        transform: translate(0, -30px) rotate(10deg);
     }
     100% {
-        transform: translate(0) rotate(10deg);
+        transform: translate(0) rotate(0);
     }
 }
 
 
 #shapes {
+    width: 50vmin;
+    height: 50vmin;
+    max-width: 300px;
+    max-height: 300px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
 }
 
-#square {
-    width: 10vmin;
-    height: 10vmin;
-    background-color: #f4a261; 
+.shape {
+    width: 40%;
     position: relative;
-    top: 18vmin;
-    right: 7vmin;
-    transform: rotate(-20deg);
+}
+
+.square {
+    top: 40%;
+    left: 15%;
     animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
-#circle-one {
-    width: 10vmin;
-    height: 10vmin;
-    border-radius: 50%;
-    background: #e9c46a;
-    position: relative;
-    top: 20vmin;
-    left: 50vmin;
+.yel-circle {
+    top: 55%;
+    left: 140%;
     animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
-#circle-two {
-    width: 10vmin;
-    height: 10vmin;
-    border-radius: 50%;
-    background: #e76f51;
-    position: relative;
-    bottom: 17vmin;
-    right: 60vmin;
+.red-circle {
+    bottom: 40%;
+    right: 175%;
     animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
 
-#triangle {
-    width: 0;
-    height: 0;
-    border-left: 5vmin solid transparent;
-    border-right: 5vmin solid transparent;
-    border-bottom: 10vmin solid #2a9d8f;
-    transform: rotate(40deg);
-    position: relative;
-    bottom: 25vmin;
-    left: 8vmin;
+.triangle {
+    bottom: 60%;
+    left: 20%;
     animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
-#hexagon {
-    width: 10vmin;
-    height: 5.78vmin;
-    background: #264653;
-    position: relative;
-    bottom: 15vmin;
-    left: 22vmin;
-    transform: rotate(10deg);
+.hexagon {
+    bottom: 40%;
+    left: 40%;
     animation: .9s ease-out 1s hexFallIn;
     animation-fill-mode: backwards;
-  }
-  #hexagon::before {
-    content: "";
-    position: absolute;
-    top: -2.7vmin;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 5vmin solid transparent;
-    border-right: 5vmin solid transparent;
-    border-bottom: 2.9vmin solid #264653;
-  }
-  #hexagon::after {
-    content: "";
-    position: absolute;
-    bottom: -2.7vmin;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 5vmin solid transparent;
-    border-right: 5vmin solid transparent;
-    border-top: 2.9vmin solid #264653;
-  }
-
-
-  @media only screen and (max-height: 570px) {
-    
-    #square {
-        width: 57px;
-        height: 57px;
-        top: 105px;
-        right: 43px;
-    }
-
-    #circle-one {
-        width: 57px;
-        height: 57px;
-        top: 114px;
-        left: 285px;
-    }
-    
-    #circle-two {
-        width: 57px;
-        height: 57px;
-        bottom: 97px;
-        right: 342px;
-    }
-
-    #triangle {
-        border-left: 28.5px solid transparent;
-        border-right: 28.5px solid transparent;
-        border-bottom: 57px solid #2a9d8f;
-        bottom: 142px;
-        left: 45.6px;
-    }
-
-    #hexagon {
-        width: 57px;
-        height: 33px;
-        bottom: 85.5px;
-        left: 125.4px;
-      }
-      #hexagon::before {
-        top: -15.4px;
-        border-left: 28.5px solid transparent;
-        border-right: 28.5px solid transparent;
-        border-bottom: 16.53px solid #264653;
-      }
-      #hexagon::after {
-        bottom: -15.4px;
-        border-left: 28.5px solid transparent;
-        border-right: 28.5px solid transparent;
-        border-top: 16.53px solid #264653;
-      }
-
 }
+
+
+@media only screen and (max-height: 500px) {
+    #shapes {
+        width: 50vmax;
+        height: 50vmax;
+    }
+}
+
+
 
 
 
@@ -354,17 +276,27 @@ h1 {
 }
 
 #windows {
-    width: 60vmin;
-    height: 60vmin;
+    width: 50vmin;
+    height: 50vmin;
+    max-width: 380px;
+    max-height: 380px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+@media only screen and (max-height: 500px) {
+   
+    #windows {
+        width: 50vmax;
+        height: 50vmax;
+    }
 }
 
 .window {
-    width: 50vmin;
-    height: 50vmin;
-    margin: 80px auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -390,7 +322,7 @@ h1 {
 }
 
 .browser-btns {
-    height: 50%;
+    height: 8vmin;
     width: 8vmin;
     display: flex;
     justify-content: space-around;
@@ -399,8 +331,8 @@ h1 {
 }
 
 .browser-btn {
-    width: 1.8vmin;
-    height: 1.8vmin;
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
 }
 
@@ -428,7 +360,7 @@ h1 {
 .search-bar p {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(206, 206, 206);
-    font-size: 1.8vmin;
+    font-size: 1.4vw;
     margin: 1% 3%;
     overflow: hidden;
 }
@@ -473,7 +405,7 @@ h1 {
 
 .window.three .window-content {
     background-image: url(./browser-windows/web-page-projects.png);
-    background-size: 50vmin;
+    background-size: cover;
 }
 
 .window.three .search-bar {
@@ -487,30 +419,10 @@ h1 {
 
 
 
- @media only screen and (max-height: 570px) {
-    
-    #windows {
-        width: 348px;
-        height: 348px;
-    }
-    .window {
-        width: 290px;
-        height: 290px;
-    }
-    .window.three .window-content {
-        background-size: 290px;
-    }
-    .browser-btn {
-        width: 10px;
-        height: 10px;
-    }
-    .search-bar p {
-        font-size: .65rem;
-    }
-
-}
 
 
+
+/* -- Wide Screen -- */
 
 
 @media only screen and (min-width: 1200px) {
@@ -523,20 +435,19 @@ h1 {
 
     #grid {
         display: flex;
-        margin-top: 100px;
+        margin-top: 17vmin;
     }
 
     #name-plate {
-        margin-left: 8vmin;
+        margin: 10vmax 0 25vmax;
     }
 
-    #circle-one {
-        left: 48vmin;
+    #name-plate {
+        margin: 10vmin 0 20vmin 10vmin;
     }
 
-    #circle-two {
-        bottom: 17vmin;
-        right: 52vmin;
+    .yel-circle {
+        left: 130%;
     }
 
     #window-container {
