--- a/test.css
+++ b/test.css
@@ -2,61 +2,52 @@
 
 body {
     margin: 0;
+    background-color: rgb(255, 255, 252);
 }
 
-
-
-header {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
-
-header h2 {
-    background-color: #ffd874;
-    border-radius: 40px;
-    font-family: "Calistoga";
-    font-size: 5vw;
-    letter-spacing: 1.1px;
-    margin: 30px;
-    padding: 10px 20px;
-}
-
-
-
-#grid-container {
+#grid {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+    margin: 10vmin 0 15vmin;
 }
 
-#window-container {
-    grid-row: 2;
+
+
+
+/* -- Main Text -- */
+
+#name-plate {
+    margin: 15vmin 0 25vmin;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    grid-row: 1;
 }
 
+@media only screen and (max-height: 500px) {
+   
+    #name-plate {
+        margin: 10vmax 0 25vmax;
+    }
+}
 
-
-#name {
+#name-text {
     font-family: "Calistoga";
     z-index: 10;
 }
 
-#intro {
+#hello {
     margin: 0 5.5vmin;  
     font-size: 6vw;
 }
 
-#info-one {
+#front-end {
     text-align: end;
     margin: 0 25vmin;
     font-size: 4vw;
 }
 
-#info-two {
+#web-dev {
     text-align: end;
     margin: 0 5.5vmin;
     font-size: 5vw;
@@ -68,32 +59,43 @@ h1 {
     margin: 0;
 }
 
-#name-plate {
-    margin: 15vmin 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-row: 1;
+
+
+@media only screen and (min-width: 575px) {
+    
+    #hello {
+        margin: 0 32px;  
+        font-size: 35px;
+    }
+    
+    #front-end {
+        margin: 0 145px;
+        font-size: 23px;
+    }
+    
+    #web-dev {
+        margin: 0 32px;
+        font-size: 29px;
+    }
+    
+    h1 {
+        font-size: 58px;
+    }
 }
 
 
 
-@keyframes squareFallIn {
-    0% {
-        transform: translate(0, -500px);
-        opacity: 0;
-    }
-    40% {
-        transform: translate(0);
-        opacity: 1;
-    }
-    70% {
-        transform: translate(0, -30px);
-    }
-    100% {
-        transform: translate(0) rotate(-20deg);
-    }
-}
+
+
+
+
+
+
+
+
+/* -- Shapes -- */
+
+
 
 @keyframes fallIn {
     0% {
@@ -112,20 +114,37 @@ h1 {
     }
 }
 
+@keyframes squareFallIn {
+    0% {
+        transform: translate(0, -500px);
+        opacity: 0;
+    }
+    40% {
+        transform: translate(0) rotate(20deg);
+        opacity: 1;
+    }
+    70% {
+        transform: translate(0, -30px) rotate(20deg);
+    }
+    100% {
+        transform: translate(0) rotate(0);
+    }
+}
+
 @keyframes triangleFallIn {
     0% {
         transform: translate(0, -500px);
         opacity: 0;
     }
     40% {
-        transform: translate(0);
+        transform: translate(0) rotate(-40deg);
         opacity: 1;
     }
     70% {
-        transform: translate(0, -30px);
+        transform: translate(0, -30px) rotate(-40deg);
     }
     100% {
-        transform: translate(0) rotate(40deg);
+        transform: translate(0) rotate(0);
     }
 }
 
@@ -135,109 +154,76 @@ h1 {
         opacity: 0;
     }
     40% {
-        transform: translate(0);
+        transform: translate(0) rotate(10deg);
         opacity: 1;
     }
     70% {
-        transform: translate(0, -30px);
+        transform: translate(0, -30px) rotate(10deg);
     }
     100% {
-        transform: translate(0) rotate(10deg);
+        transform: translate(0) rotate(0);
     }
 }
-
-
-
 
 
 #shapes {
+    width: 50vmin;
+    height: 50vmin;
+    max-width: 300px;
+    max-height: 300px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
 }
 
-#square {
-    width: 8vmin;
-    height: 8vmin;
-    background-color: #f4a261; 
+.shape {
+    width: 40%;
     position: relative;
-    top: 15vmin;
-    right: 5vmin;
-    transform: rotate(-20deg);
+}
+
+.square {
+    top: 40%;
+    left: 15%;
     animation: 1s ease-in 1.1s squareFallIn;
     animation-fill-mode: backwards;
 }
 
-#circle {
-    width: 8vmin;
-    height: 8vmin;
-    border-radius: 50%
-}
-
-.circle-one {
-    background: #e9c46a;
-    position: relative;
-    top: 18vmin;
-    left: 45vmin;
+.yel-circle {
+    top: 55%;
+    left: 140%;
     animation: 1s ease .8s fallIn;
     animation-fill-mode: backwards;
 }
 
-.circle-two {
-    background: #e76f51;
-    position: relative;
-    bottom: 15vmin;
-    right: 55vmin;
+.red-circle {
+    bottom: 40%;
+    right: 175%;
     animation: 1.1s ease-out 1s fallIn;
     animation-fill-mode: backwards;
 }
 
-#triangle {
-    width: 0;
-    height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-bottom: 8vmin solid #2a9d8f;
-    transform: rotate(40deg);
-    position: relative;
-    bottom: 23vmin;
-    left: 8vmin;
+.triangle {
+    bottom: 60%;
+    left: 20%;
     animation: 1s linear .9s triangleFallIn;
     animation-fill-mode: backwards;
 }
 
-#hexagon {
-    width: 8vmin;
-    height: 4.62vmin;
-    background: #264653;
-    position: relative;
-    bottom: 12vmin;
-    left: 20vmin;
-    transform: rotate(10deg);
+.hexagon {
+    bottom: 40%;
+    left: 40%;
     animation: .9s ease-out 1s hexFallIn;
     animation-fill-mode: backwards;
-  }
-  #hexagon::before {
-    content: "";
-    position: absolute;
-    top: -2.16vmin;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-bottom: 2.31vmin solid #264653;
-  }
-  #hexagon::after {
-    content: "";
-    position: absolute;
-    bottom: -2.16vmin;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 4vmin solid transparent;
-    border-right: 4vmin solid transparent;
-    border-top: 2.31vmin solid #264653;
-  }
+}
+
+
+@media only screen and (max-height: 500px) {
+    #shapes {
+        width: 50vmax;
+        height: 50vmax;
+    }
+}
 
 
 
@@ -247,6 +233,8 @@ h1 {
 
 
 
+
+/* -- Browsers -- */
 
 
 @keyframes cardStackRight {
@@ -280,19 +268,35 @@ h1 {
 }
 
 
+#window-container {
+    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
 
 #windows {
-    width: 60vmin;
-    height: 60vmin;
+    width: 50vmin;
+    height: 50vmin;
+    max-width: 380px;
+    max-height: 380px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+@media only screen and (max-height: 500px) {
+   
+    #windows {
+        width: 50vmax;
+        height: 50vmax;
+    }
 }
 
 .window {
-    width: 50vmin;
-    height: 50vmin;
-    margin: 80px auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -307,19 +311,6 @@ h1 {
     height: 85%;
     border-end-start-radius: 5px;
     border-end-end-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.window-content h2 {
-    font-family: "Calistoga";
-    font-size: 1rem;
-    margin-top: 40px;
-}
-
-.window-content #dev {
-    font-size: 1.2rem;
 }
 
 .nav-bar {
@@ -330,18 +321,18 @@ h1 {
     align-items: center;
 }
 
-.circles {
-    height: 50%;
-    width: 50px;
+.browser-btns {
+    height: 8vmin;
+    width: 8vmin;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 5px;
+    margin: 0 2vmin;
 }
 
-.circle {
-    width: 1.8vmin;
-    height: 1.8vmin;
+.browser-btn {
+    width: 20%;
+    height: 20%;
     border-radius: 50%;
 }
 
@@ -369,14 +360,14 @@ h1 {
 .search-bar p {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(206, 206, 206);
-    font-size: 1.2vw;
+    font-size: 1.4vw;
     margin: 1% 3%;
     overflow: hidden;
 }
 
 .menu {
     height: 35%;
-    width: 20px;
+    width: 4vmin;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -390,37 +381,79 @@ h1 {
 }
 
 
-.one {
+.window.one {
     background-color:#2a9d8f;
     transform: rotate(-6deg);
     animation: .9s ease-in 1s cardStackRight;
     animation-fill-mode: both;
 }
 
-.two {
+.window.two {
     background-color:#e76f51;
     transform: rotate(8deg);
     animation: .9s ease-in 1s cardStackLeft;
     animation-fill-mode: both;
 }
 
-.two .menu-bar {
+.window.two .menu-bar {
     background-color:#f8a894;
 }
-.three {
+.window.three {
     background-color:#264653;
     z-index: 10;
 }
 
-.three .window-content {
-    background-image: url(./browser\ windows/web-page-projects.png);
-    background-size: 50vmin;
+.window.three .window-content {
+    background-image: url(./browser-windows/web-page-projects.png);
+    background-size: cover;
 }
 
-.three .search-bar {
+.window.three .search-bar {
     background-color: rgb(0, 0, 0);
 }
 
-.three .menu-bar {
+.window.three .menu-bar {
     background-color: #5a8393;
+}
+
+
+
+
+
+
+
+/* -- Wide Screen -- */
+
+
+@media only screen and (min-width: 1200px) {
+    
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #grid {
+        display: flex;
+        margin-top: 17vmin;
+    }
+
+    #name-plate {
+        margin: 10vmax 0 25vmax;
+    }
+
+    #name-plate {
+        margin: 10vmin 0 20vmin 10vmin;
+    }
+
+    .yel-circle {
+        left: 130%;
+    }
+
+    #window-container {
+        margin-left: 100px;
+        position: relative;
+        transform: rotate(10deg);
+        top: 100px;
+    }
 }
