--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     background-color: rgb(255, 255, 252);
+    padding-bottom: 5vmin;
 }
 
 #grid {
@@ -26,6 +27,28 @@ a {
 
 
 
+
+@keyframes hoverIn {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.05);
+    }
+}
+
+@keyframes hoverOut {
+    0% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+
+
 /* -- Header -- */
 
 header {
@@ -43,9 +66,6 @@ header img {
     max-height: 50px;
 }
 
-#languages {
-    display: none;
-}
 
 #contact {
     display: flex;
@@ -53,13 +73,13 @@ header img {
 }
 
 #contact img:hover {
-    transform: scale(1.1);
-    transition: .2s;
+    animation: .5s hoverIn;
+    animation-fill-mode: both;
 }
 
 #contact img:not(:hover) {
-    transform: scale(1);
-    transition: .2s;
+    animation: .5s hoverOut;
+    animation-fill-mode: both;
 }
 
 #languages {
@@ -94,7 +114,7 @@ header img {
     background-color:white;
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(57, 57, 57, 0.103);
-    margin: 0 3vmin 3vmin;
+    margin: 0 3vmin;
 }
 
 
@@ -102,10 +122,11 @@ header img {
 .popup.is-active {
     height: 100%;
     opacity: 1;
+    margin: 0 3vmin 3vmin;
 }
 
 .popup p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'poppins';
 }
 .popup img {
     height: 25px;
@@ -484,6 +505,26 @@ h1 {
     margin: 0 2vmin;
 }
 
+@media only screen and (max-height: 500px) {
+   
+    .browser-btns {
+        height: 8vmax;
+        width: 8vmax;
+    }
+}
+
+#close-browser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#close-browser img {
+    height: 60%;
+    opacity: .8;
+    display: none;
+}
+
 .browser-btn {
     width: 20%;
     height: 20%;
@@ -582,7 +623,7 @@ h1 {
     overflow-y: scroll;
 }
 
-.grid-bg {
+#grid-bg {
     width: 90%;
     height: 150%;
     margin: 5% 0;
@@ -642,17 +683,21 @@ h1 {
 
 #enter {
     position: absolute;
-    bottom: 35%;
+    bottom: 31%;
+    justify-self: center;
     align-self: center;
-    text-align: center;
 }
 
 #enter h2 {
-    font-family: "Abril fatface";
-    font-size: 8vw;
+    font-family: "mansalva";
+    font-weight: 600;
+    font-style: italic;
+    font-size: 7vw;
     letter-spacing: 1px;
-    margin: 0;
-    line-height: 1;
+    text-align: center;
+    width: fit-content;
+    margin: 2vmin auto;
+    padding: 0 2vmin;
     background: linear-gradient(120deg, #ffe39c 0%, #ffe39c 100%);
     background-repeat: no-repeat;
     background-size: 100% 40%;
@@ -661,25 +706,81 @@ h1 {
 
 @media only screen and (min-width: 700px) {
     #enter h2 {
-        font-size: 56px;
+        font-size: 48px;
     }
 }
 
-#enter:hover {
-    transform: scale(1.1);
-    transition: .5s;
+#enter h2:hover {
+    animation: .5s hoverIn;
+    animation-fill-mode: both;
     cursor: pointer;
 }
 
-#enter:not(:hover) {
-    transform: scale(1);
-    transition: .5s;
+#enter h2:not(:hover) {
+    animation: .5s hoverOut;
+    animation-fill-mode: both;
 }
 
 #enter a:active {
     color:#264653;
 }
 
+
+
+#about-me {
+    display: none;
+    font-family: 'poppins';
+    font-size: 3.8vw;
+    color: white;
+    width: 80%;
+}
+
+#welcome {
+    font-family: 'calistoga';
+    font-style: italic;
+    font-size: 7.6vw;
+}
+
+#projects-2 {
+    font-family: "mansalva";
+    color: #ffdd87;
+    font-size: 7.6vw;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    background: linear-gradient(120deg, black 0%, black 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 40%;
+    background-position: 0 60%;
+    width: fit-content;
+    margin: 3vmin auto 15vmin;
+    padding: 0 2vmin;
+}
+
+#projects-2:hover {
+    animation: .5s hoverIn;
+    animation-fill-mode: both;
+    cursor: pointer;
+}
+
+#projects-2:not(:hover) {
+    animation: .5s hoverOut;
+    animation-fill-mode: both;
+}
+
+@media only screen and (min-width: 500px) {
+    
+    #about-me {
+        font-size: 1rem;
+    }
+    #welcome {
+        font-size: 2rem;
+    }
+    #projects-2 {
+        font-size: 2rem;
+        margin: 3vmin auto 5vmin;
+    }
+}
 
 
 
@@ -694,15 +795,6 @@ h1 {
 
 @media only screen and (min-width: 1000px) {
     
-    header {
-        justify-content: end;
-    }
-
-    #languages {
-        position: relative;
-        left: 114px;
-    }
-
     main {
         display: flex;
         flex-direction: column;
